k8s/components/apps/analytics/metabase/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: metabase
    spec:
      securityContext:
        fsGroup: 2000
      containers:
        - name: metabase
          image: metabase/metabase:v0.59.6
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 300
            periodSeconds: 15
          volumeMounts:
            - name: metabase-plugins
              mountPath: /plugins
      restartPolicy: Always
      volumes:
        - name: metabase-plugins
          persistentVolumeClaim:
            claimName: pvc-metabase-plugins
