k8s/components/apps/analytics/metabase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
spec:
  type: ClusterIP
  selector:
    app: metabase
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
